fixing overflow issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,4 +7,6 @@
 
 html, body {
 	height: 100%;
+	overflow:hidden;
+	font-family:Helvetica, Arial, sans-serif;
 }
